# thesis-project-2024

./: .editorconfig  .gitignore  LICENSE  Pipfile  README.md  app.py  config.py  config.toml  configs.py  defaults.py  main.py  pyproject.toml  secrets.toml
analysis/: analyzer.py  dangerous_permissions.txt  gpt.py  permissions.py  trackers.py
analysis/core/: chunking.py  embedding.py  qa.py  utils.py
analysis/knowledge_gpt/core/: chunking.py  debug.py  embedding.py  parsing.py  prompts.py  qa.py  utils.py
api/: error.py  hello.py  restful.py  routes.py
api/routes/: fetch.py  importers.py
docs/: intune.md
importers/: csv.py  importer.py  intune.py
importers/apps/: appstore.py  exodus.py  exodus_importer.py  importer.py  playstore.py  urls.py
importers/devices/: csv.py  importer.py  intune.py
model/: app.py  mdm.py  system_app_ids.py
repository/: apps.py  devices.py
thesis/: README.md  apps_manual.csv  apps_translated.csv
