[tool.poetry]
name = "thesis-project-2024"
version = "0.1.0"
description = "Risk Assessment of Managed Smartphones using MDM"
authors = ["Hannes Mann <hmann@kth.se>", "Alexander Wigren <wig@kth.se>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.29"
flask-sqlalchemy = "^3.1.1"
gevent = "^24.2.1"
langchain = "^0.0.220"
cohere = "^3.2.1"
faiss-cpu = "^1.7.3"
openai = "^0.27.8"
docx2txt = "^0.8"
pillow = "^9.4.0"
tenacity = "^8.2.0"
tiktoken = "^0.4.0"
pycryptodome = "^3.18.0"
pymupdf = "^1.22.5"
transformers = "^4.33.1"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
