[tool.poetry]
name = "thesis-project-2024"
version = "0.1.0"
description = "Risk Assessment of Managed Smartphones using MDM"
authors = ["Hannes Mann <hmann@kth.se>", "Alexander Wigren <wig@kth.se>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.220"
cohere = "^3.2.1"
faiss-cpu = "^1.7.3"
openai = "^0.27.8"
docx2txt = "^0.8"
pillow = "^9.4.0"
tenacity = "^8.2.0"
tiktoken = "^0.4.0"
pycryptodome = "^3.18.0"
pymupdf = "^1.22.5"
transformers = "^4.33.1"
python-dotenv = "^0.21.1"
ratelimit = "^2.2.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
validators = "^0.28.1"
pdfkit = "^1.0.0"
loguru = "^0.7.2"
toml = "^0.10.2"
bottle = "^0.12.25"
waitress = "^3.0.0"
sqlalchemy = "^2.0.30"
munch = "^4.0.0"
msal = "^1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
