[tool.poetry]
name = "thesis-project-2024"
version = "0.1.0"
description = "Risk Assessment of Managed Smartphones using MDM"
authors = ["Hannes Mann <hmann@kth.se>", "Alexander Wigren <wig@kth.se>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
bottle = "^0.12.25"
cohere = "^5.5.4"
dataclasses-json = "^0.6.6"
docx2txt = "^0.8"
faiss-cpu = "^1.7.3"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-core = "^0.2.3"
loguru = "^0.7.2"
mergedeep = "^1.3.4"
msal = "^1.28.0"
munch = "^4.0.0"
openai = "^1.30.5"
pdfkit = "^1.0.0"
pillow = "^10.3.0"
pycryptodome = "^3.18.0"
pydantic = "^2.7.2"
pymupdf = "^1.22.5"
python = "^3.10"
python-dotenv = "^1.0.1"
ratelimit = "^2.2.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.30"
tenacity = "^8.2.0"
tiktoken = "^0.7.0"
toml = "^0.10.2"
transformers = "^4.33.1"
types-requests = "^2.32.0.20240602"
urllib3 = "^2.2.1"
validators = "^0.28.1"
waitress = "^3.0.0"
langchain-openai = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
